Fix flex parent item spacing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -210,9 +210,6 @@ a {
   color: #63a2d4;
 }
 
-.reply-box {
-}
-
 .reply-btn {
 }
 
@@ -291,21 +288,6 @@ border: none;
 
 .box, .reply-box-parent {
    display: inline;
-}
-
-.reply-box-outer {
-  border-radius: 3px;
-  /* box-shadow: 0 2px 2px rgba(204, 197, 185, 0.5); */
-  margin-bottom: 15px;
-  border: 1px solid rgba(0,0,0,.1);
-  padding: .75em;
-}
-
-/* These are all the replies nested inside the primary reply */
-.reply-box-inner {
-  background-color: rgb(248, 248, 248);
-  margin-bottom: .25em;
-  padding: 1em;
 }
 
 .thumbnail img {
@@ -514,9 +496,28 @@ p {
   overflow: auto;
 }
 
+.flex-parent {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.reply-box-outer {
+  border: 1px solid rgba(0,0,0,.1);
+  border-radius: 3px;
+  margin-bottom: 15px;
+  padding: .75em;
+}
+
+/* These are all the replies nested inside the primary reply */
+.reply-box-inner {
+  background-color: rgb(248, 248, 248);
+  margin-bottom: .25em;
+  padding: 1em;
+  flex-grow: 2;
+}
+
 .avatar-box {
   float: left;
-  border: 1px solid green;
   margin-right: 10px;
   width: 40px;
   height: 40px;
@@ -526,7 +527,6 @@ p {
   text-align:center;
   vertical-align:middle;
 }
-
 
 .message-box__body {
   float: left;
